fixed icon display on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -157,7 +157,7 @@ p {
   height: 115px;
 
   float: left;
-  margin: 0px 10px 15px 10px;
+  margin: 0px 0px 15px 0px;
   p {
     margin: 0px 0;
   }
